@@ -31,5 +31,8 @@ quelea (2016.2) stable; urgency=normal
   * Fix bugs caused by passages imported from a schedule (not being able to switch translation nor extending the passage)
   * Add support for audio files
   * Added extra song title keywords "interlude" and "ending"
+  * Add basic support for undo/redo while editing songs
+  * Add right-click menu in song edit window with paste option
+  * Fix bug when trying to add a non-breaking line or a section title to a song with chords
 
  -- Michael Berry <michael@quelea.org>  Sunday, 26 May 2016 00:00:00 +0000
